# postgresql-to-amqp

./: Cargo.toml  Dockerfile  README.md  circle.yml
src/: app_config.rs  main.rs
