[package]
name = "postgresql-to-amqp"
version = "0.1.4-pre"
authors = ["FG Ribreau <github@fgribreau.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "PostgreSQL to AMQP, forward PostgreSQL notifications to an AMQP queue."

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/postgresql-to-amqp"
homepage = "https://github.com/FGRibreau/postgresql-to-amqp"
repository = "https://github.com/FGRibreau/postgresql-to-amqp"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["postgresql", "amqp", "rabbitmq", "notify", "postgres"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["database"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

include = ["src/main.rs","src/app_config.rs", "Cargo.toml"]

[dependencies]
# AMQP specifications
# https://docs.rs/amq-protocol/0.15.0/amq_protocol/
amq-protocol = "^0.15"

# https://github.com/Geal/lapin
lapin-futures = "^0.6"

# https://docs.rs/tokio-core/0.1.6/tokio_core/
tokio-core = "0.1.6"

# An implementation of futures and streams featuring zero allocations, composability, and iterator-like interfaces.
# https://docs.rs/futures/0.1.12/futures/
futures = "0.1.12"

# A lightweight logging facade for Rust
# https://doc.rust-lang.org/log/log/index.html
log = "0.3.7"

# http://rust-lang-nursery.github.io/log/env_logger/
# A logger configured via an environment variable which writes to standard error.
env_logger = "0.4.2"

# https://github.com/sfackler/rust-postgres
# A native PostgreSQL driver for Rust.
postgres = "0.13"

# https://crates.io/crates/fallible-iterator
# Fallible iterator traits (used for iterate (blocking) through notifications)
fallible-iterator = "0.1.3"
